--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"ramda": "^0.28.0",
 		"react": "17.0.2",
 		"react-native": "0.68.0",
+		"react-native-code-push": "^7.0.4",
 		"react-native-safe-area-context": "^4.2.4",
 		"react-native-svg": "^12.3.0",
 		"react-native-uuid": "^2.0.1"
