--- a/package.json
+++ b/package.json
@@ -1,74 +1,77 @@
 {
-    "name": "timely",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "android": "react-native run-android",
-        "ios": "react-native run-ios",
-        "start": "react-native start",
-        "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-        "wdio": "wdio run test/wdio.conf.ts"
-    },
-    "dependencies": {
-        "@react-native-async-storage/async-storage": "^1.17.3",
-        "@types/ramda": "^0.28.7",
-        "@wdio/types": "^7.19.1",
-        "appcenter": "^4.4.3",
-        "appcenter-analytics": "^4.4.3",
-        "appcenter-crashes": "^4.4.3",
-        "native-base": "^3.3.10",
-        "path": "^0.12.7",
-        "ramda": "^0.28.0",
-        "react": "17.0.2",
-        "react-native": "0.68.0",
-        "react-native-code-push": "^7.0.4",
-        "react-native-safe-area-context": "^4.2.4",
-        "react-native-svg": "^12.3.0",
-        "react-native-uuid": "^2.0.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/runtime": "^7.12.5",
-        "@commitlint/cli": "^17.0.3",
-        "@commitlint/config-conventional": "^17.0.3",
-        "@react-native-community/eslint-config": "^2.0.0",
-        "@types/jest": "^26.0.23",
-        "@types/react-native": "^0.67.3",
-        "@types/react-test-renderer": "^17.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.17.0",
-        "@typescript-eslint/parser": "^5.17.0",
-        "@wdio/appium-service": "^7.19.1",
-        "@wdio/cli": "^7.19.3",
-        "@wdio/jasmine-framework": "^7.19.3",
-        "@wdio/local-runner": "^7.19.3",
-        "@wdio/spec-reporter": "^7.19.1",
-        "appium": "^1.22.3",
-        "babel-jest": "^26.6.3",
-        "chromedriver": "^100.0.0",
-        "eslint": "^7.32.0",
-        "husky": "^8.0.1",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.67.0",
-        "react-test-renderer": "17.0.2",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.3",
-        "wdio-chromedriver-service": "^7.3.2",
-        "wdio-vscode-service": "^2.0.1",
-        "wdio-wait-for": "^2.2.5"
-    },
-    "resolutions": {
-        "@types/react": "^17"
-    },
-    "jest": {
-        "preset": "react-native",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ]
-    }
+	"name": "timely",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"start": "react-native start",
+		"test": "jest",
+		"test:ci": "jest --json --outputFile=jest-report.json",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"wdio": "wdio run test/wdio.conf.ts",
+		"preci": "rm -fr node_modules",
+		"ci": "yarn install --frozen-lockfile"
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.17.3",
+		"@types/ramda": "^0.28.7",
+		"@wdio/types": "^7.19.1",
+		"appcenter": "^4.4.3",
+		"appcenter-analytics": "^4.4.3",
+		"appcenter-crashes": "^4.4.3",
+		"native-base": "^3.3.10",
+		"path": "^0.12.7",
+		"ramda": "^0.28.0",
+		"react": "17.0.2",
+		"react-native": "0.68.0",
+		"react-native-code-push": "^7.0.4",
+		"react-native-safe-area-context": "^4.2.4",
+		"react-native-svg": "^12.3.0",
+		"react-native-uuid": "^2.0.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@babel/runtime": "^7.12.5",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@react-native-community/eslint-config": "^2.0.0",
+		"@types/jest": "^26.0.23",
+		"@types/react-native": "^0.67.3",
+		"@types/react-test-renderer": "^17.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
+		"@typescript-eslint/parser": "^5.17.0",
+		"@wdio/appium-service": "^7.19.1",
+		"@wdio/cli": "^7.19.3",
+		"@wdio/jasmine-framework": "^7.19.3",
+		"@wdio/local-runner": "^7.19.3",
+		"@wdio/spec-reporter": "^7.19.1",
+		"appium": "^1.22.3",
+		"babel-jest": "^26.6.3",
+		"chromedriver": "^100.0.0",
+		"eslint": "^7.32.0",
+		"husky": "^8.0.1",
+		"jest": "^26.6.3",
+		"metro-react-native-babel-preset": "^0.67.0",
+		"react-test-renderer": "17.0.2",
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.3",
+		"wdio-chromedriver-service": "^7.3.2",
+		"wdio-vscode-service": "^2.0.1",
+		"wdio-wait-for": "^2.2.5"
+	},
+	"resolutions": {
+		"@types/react": "^17"
+	},
+	"jest": {
+		"preset": "react-native",
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx",
+			"json",
+			"node"
+		]
+	}
 }
