--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "react-native start",
 		"test": "jest",
 		"test:ci": "jest --json --outputFile=jest-report.json",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
 		"wdio": "wdio run test/wdio.conf.ts",
 		"preci": "rm -fr node_modules",
 		"ci": "yarn install --frozen-lockfile"
@@ -52,6 +52,7 @@
 		"eslint": "^7.32.0",
 		"husky": "^8.0.1",
 		"jest": "^26.6.3",
+		"lint-staged": "^13.0.3",
 		"metro-react-native-babel-preset": "^0.67.0",
 		"react-test-renderer": "17.0.2",
 		"ts-node": "^10.7.0",
@@ -72,6 +73,13 @@
 			"jsx",
 			"json",
 			"node"
+		]
+	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx,json}": [
+			"prettier src --write",
+			"eslint src --fix",
+			"git add"
 		]
 	}
 }
