--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"ci": "yarn install --frozen-lockfile"
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.17.3",
+		"@react-native-async-storage/async-storage": "^1.17.7",
+		"@testing-library/react-native": "^10.1.1",
 		"@types/ramda": "^0.28.7",
 		"@wdio/types": "^7.19.1",
 		"appcenter": "^4.4.3",
@@ -36,6 +37,7 @@
 		"@commitlint/cli": "^17.0.3",
 		"@commitlint/config-conventional": "^17.0.3",
 		"@react-native-community/eslint-config": "^2.0.0",
+		"@testing-library/jest-native": "^4.0.5",
 		"@types/jest": "^26.0.23",
 		"@types/react-native": "^0.67.3",
 		"@types/react-test-renderer": "^17.0.1",
@@ -52,9 +54,11 @@
 		"eslint": "^7.32.0",
 		"husky": "^8.0.1",
 		"jest": "^26.6.3",
+		"jest-stare": "^2.4.1",
 		"lint-staged": "^13.0.3",
 		"metro-react-native-babel-preset": "^0.67.0",
 		"react-test-renderer": "17.0.2",
+		"ts-jest": "^28.0.5",
 		"ts-node": "^10.7.0",
 		"typescript": "^4.6.3",
 		"wdio-chromedriver-service": "^7.3.2",
