fix: ios workflow added

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -16,8 +16,8 @@ on:
         required: true
       IOS_CERTIFICATE_PASSWORD:
         required: true
-      APP_CENTER_TOKEN_IOS:
-        required: true
+      # APP_CENTER_TOKEN_IOS:
+      #   required: true
 
 jobs:
   build-ios:
