--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -12,8 +12,8 @@ on:
         type: boolean
         description: Publish to Appcenter
     secrets:
-      # APP_CENTER_TOKEN_ANDROID:
-      #   required: true
+      APPCENTER_TOKEN_ANDROID:
+        required: true
       ANDROID_KEYSTORE:
         required: true
       ANDROID_KEY_ALIAS:
@@ -75,29 +75,29 @@ jobs:
           name: Timely.aab
           path: ${{steps.sign_app.outputs.signedReleaseFile}}
 
-  # publish-to-appcenter:
-  #   if: ${{ inputs.publish == true }}
-  #   runs-on: ubuntu-latest
-  #   needs: build-android
-  #   steps:
-  #     - uses: actions/checkout@v2
+  publish-to-appcenter:
+    if: ${{ inputs.publish == true }}
+    runs-on: ubuntu-latest
+    needs: build-android
+    steps:
+      - uses: actions/checkout@v2
 
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: Timely.aab
-  #         path: "android/"
+      - uses: actions/download-artifact@v3
+        with:
+          name: Timely.aab
+          path: "android/"
 
-  #     - name: set up JDK 1.8
-  #       uses: actions/setup-java@v1
-  #       with:
-  #         java-version: 1.8
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-  #     - name: Upload artifact to App Center
-  #       uses: wzieba/AppCenter-Github-Action@v1
-  #       with:
-  #         appName: Finder.com/Finder-UK-Android
-  #         token: ${{secrets.APP_CENTER_TOKEN_ANDROID}}
-  #         group: UKInternal
-  #         file: android/app-release.aab
-  #         notifyTesters: true
-  #         debug: false
+      - name: Upload artifact to App Center
+        uses: wzieba/AppCenter-Github-Action@v1
+        with:
+          appName: paramsinghvc/Timely
+          token: ${{secrets.APPCENTER_TOKEN_ANDROID}}
+          group: UKInternal
+          file: android/app-release.aab
+          notifyTesters: true
+          debug: false
