--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     secrets: inherit
 
   # Third Job
-  build-ios:
-    needs: install-and-test
-    uses: ./.github/workflows/build-ios.yml
-    secrets: inherit
+  # build-ios:
+  #  needs: install-and-test
+  #  uses: ./.github/workflows/build-ios.yml
+  #  secrets: inherit
