--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -7,19 +7,19 @@ on:
         required: false
         type: string
         default: "release"
-      publish:
-        required: false
-        type: boolean
-        description: Publish to Appcenter
-    secrets:
-      APPCENTER_TOKEN_ANDROID:
-        required: true
-      ANDROID_KEYSTORE:
-        required: true
-      ANDROID_KEY_ALIAS:
-        required: true
-      ANDROID_KEYSTORE_PASSWORD:
-        required: true
+    #   publish:
+    #     required: false
+    #     type: boolean
+    #     description: Publish to Appcenter
+    # secrets:
+    #   APPCENTER_TOKEN_ANDROID:
+    #     required: true
+    #   ANDROID_KEYSTORE:
+    #     required: true
+    #   ANDROID_KEY_ALIAS:
+    #     required: true
+    #   ANDROID_KEYSTORE_PASSWORD:
+    #     required: true
 
 jobs:
   build-android:
@@ -58,46 +58,20 @@ jobs:
         run: |
           cd android && ./gradlew bundle${{inputs.environment == 'release' && 'Release' || 'Debug'}} --no-daemon
       - run: pwd
-      - name: Sign app APK
-        uses: r0adkll/sign-android-release@v1
-        id: sign_app
-        with:
-          releaseDirectory: android/app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
-          alias: ${{ secrets.ANDROID_KEY_ALIAS }}
-          keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-          # keyPassword: ${{ secrets.KEY_PASSWORD }}
+      # - name: Sign app APK
+      #   uses: r0adkll/sign-android-release@v1
+      #   id: sign_app
+      #   with:
+      #     releaseDirectory: android/app/build/outputs/bundle/release
+      #     signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
+      #     alias: ${{ secrets.ANDROID_KEY_ALIAS }}
+      #     keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+      #     # keyPassword: ${{ secrets.KEY_PASSWORD }}
 
-      # Upload to Artifact
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: Timely.aab
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+      # # Upload to Artifact
+      # - name: Upload Artifact
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: TestApp.aab
+      #     path: ${{steps.sign_app.outputs.signedReleaseFile}}
 
-  publish-to-appcenter:
-    if: ${{ inputs.publish == true }}
-    runs-on: ubuntu-latest
-    needs: build-android
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: Timely.aab
-          path: "android/"
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Upload artifact to App Center
-        uses: wzieba/AppCenter-Github-Action@v1
-        with:
-          appName: paramsinghvc/Timely
-          token: ${{secrets.APPCENTER_TOKEN_ANDROID}}
-          group: UKInternal
-          file: android/app-release.aab
-          notifyTesters: true
-          debug: false
