--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -50,44 +50,17 @@ jobs:
       - name: Build iOS (Release)
         uses: yukiarrr/ios-build-action@v1.5.0
         with:
-          project-path: ios/Timely.xcodeproj
+          project-path: ios/TestApp.xcodeproj
           p12-base64: ${{ secrets.IOS_P12_BASE64 }}
           mobileprovision-base64: ${{ secrets.IOS_MOBILEPROVISION_BASE64 }}
           code-signing-identity: "Apple Distribution"
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           team-id: ${{ secrets.IOS_TEAM_ID }}
-          workspace-path: ios/Timely.xcworkspace
-          output-path: "Timely.ipa"
+          workspace-path: ios/TestApp.xcworkspace
+          output-path: "TestApp.ipa"
 
       - name: Upload build
         uses: actions/upload-artifact@v3
         with:
-          name: "Timely.ipa"
-          path: "Timely.ipa"
-
-  publish-to-appcenter:
-    if: ${{ inputs.publish == true }}
-    runs-on: ubuntu-latest
-    needs: build-ios
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: Timely.ipa
-          path: "ios/"
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Upload artifact to App Center
-        uses: wzieba/AppCenter-Github-Action@v1
-        with:
-          appName: paramsinghvc/Timely-iOS
-          token: ${{secrets.APPCENTER_TOKEN_IOS}}
-          group: UKInternal
-          file: "ios/Timely.ipa"
-          notifyTesters: true
-          debug: false
+          name: "TestApp.ipa"
+          path: "TestApp.ipa"
